flux/trusted/siyuan/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: siyuan
  namespace: siyuan
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`notes.kschamer.info`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
        - name: authelia-forwardauth
          namespace: traefik
      services:
        - name: siyuan
          port: 6806
  tls:
    certResolver: letsencrypt
    domains:
      - main: kschamer.info
        sans:
          - "*.kschamer.info"
